# simple-word-counter

./: .gitignore  Cargo.toml  README.md  Trunk.toml  app.webmanifest  index.html  main-1dc22505da247362.css  main-22c786ad76cb669d.css  main-35cb4d8996e2a636.css  main-3ca6056662734202.css  main-57d3b63d9aef9326.css  main-62837aea44ad569c.css  main-8f52fe3656c4d85d.css  package-lock.json  package.json  service_worker.js  simple-word-counter-web-1e72600150cdeb96.js  simple-word-counter-web-1e72600150cdeb96_bg.wasm  simple-word-counter-web-22db2cd00ef57bd4.js  simple-word-counter-web-22db2cd00ef57bd4_bg.wasm  simple-word-counter-web-2a6273694bff0c47.js  simple-word-counter-web-2a6273694bff0c47_bg.wasm  simple-word-counter-web-2eeca7622f3b8402.js  simple-word-counter-web-2eeca7622f3b8402_bg.wasm  simple-word-counter-web-33e34fe0e3cacf75.js  simple-word-counter-web-33e34fe0e3cacf75_bg.wasm  simple-word-counter-web-3d2377b26c12ac43.js  simple-word-counter-web-3d2377b26c12ac43_bg.wasm  simple-word-counter-web-4108adcc4397245c.js  simple-word-counter-web-4108adcc4397245c_bg.wasm  simple-word-counter-web-4308e9ea92f67747_bg.wasm  simple-word-counter-web-47bd1b19cd19428d.js  simple-word-counter-web-47bd1b19cd19428d_bg.wasm  simple-word-counter-web-4b1485cfd73ce2a.js  simple-word-counter-web-4b1485cfd73ce2a_bg.wasm  simple-word-counter-web-4bc8ace932e3e7da.js  simple-word-counter-web-4bc8ace932e3e7da_bg.wasm  simple-word-counter-web-4ff524880186e68e.js  simple-word-counter-web-4ff524880186e68e_bg.wasm  simple-word-counter-web-51a9919e308f9223.js  (+33 more)
src/: app.rs  (+3 more)
src-tauri/: Cargo.toml  (+1 more)
(+10 files in other folders)
