[package]
name = "simple-word-counter-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.3.0", features = ["stable"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
regex = "1.8.3"
gloo = "0.8.0"
web-sys = { version = "0.3.63", features = [
    "Blob",
    "BlobPropertyBag",
    "Storage",
    "Url",
    "Window",
] }

[workspace]
members = ["src-tauri"]
