[package]
name = "simple-word-counter-web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6.13", features = ["csr"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
regex = "1.8.3"
gloo = "0.11.0"
web-sys = { version = "0.3.69", features = [
    "Blob",
    "BlobPropertyBag",
    "Storage",
    "Url",
    "Window",
] }
